Displaying the right name now

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <script type="text/template" id="Search-Result">
       <div class="span2 timestamp"><%= timestamp %></div>
-      <div class="span2 author"><%= author %></div>
+      <div class="span2 author"><%= from_dispname %></div>
       <div class="span8 text"><%= body_xml %></div>
     </script>
     <!-- Le javascript
