--- a/index.html
+++ b/index.html
@@ -16,15 +16,25 @@
       a { cursor: pointer }
       .result {
         border-top: 1px solid #a9a;
-        padding: 1em 0;
+        margin: 1em 0;
       }
       .row > .row {
         margin-left: 0;
       }
+      .off > * { display: none }
+      .row.result.highlight,
+      .off .highlight {
+        background: none;
+      }
       .highlight {
-        background: rgb(250,250,180);
-        text-shadow: 0 1px gold;
+        cursor: pointer;
+        background: rgba(250,250,160, 0.5);
         border-radius: 12px;
+        display: block !important;
+      }
+      .row.result.highlight:hover,
+      .highlight:hover {
+        background: rgba(250,250,160, 1.0);
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
@@ -74,7 +84,7 @@
       <div class="span8 text"><%= body_xml %></div>
     </script>
     <script type="text/template" id="Search-Result">
-      <div class="span2 timestamp"><a onclick="Expand(<%= rawtimestamp %>, <%= convo_id %>, this)"><%= timestamp %></a></div>
+      <div class="span2 timestamp"><%= timestamp %></div>
       <div class="span2 author"><%= from_dispname %></div>
       <div class="span8 text"><%= body_xml %></div>
     </script>
