--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <style>
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+       padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+      #copy{
+       padding-top: 300px;
       }
       a { cursor: pointer }
       .result {
@@ -77,6 +80,8 @@
 
 
     </div> <!-- /container -->
+
+    <div id=copy>done by chris.mckenzie. <a href=https://github.com/kristopolous/skype-search>latest version</a></div>
 
     <script type="text/template" id="Search-Expanded-Result">
       <div class="span2 timestamp"><%= timestamp %></div>
