--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         white-space: pre;
         padding:0.5em;
         margin:0.15em;
+        cursor: pointer;
         width:9em
+      }
+      .members span.hover {
+        box-shadow: 0 0 4px 4px blue;
       }
       .result {
         border-top: 1px solid #a9a;
@@ -39,7 +43,7 @@
       }
       .call span{ 
         display:inline-block;
-        padding:0.5em;
+        padding:0.3em 0.5em;
         margin:0.25em;
         vertical-align: middle;
       }
