--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
       #copy{
-       padding-top: 300px;
+       text-align:center;
+       padding-top: 900px;
       }
       a { cursor: pointer }
       .members span {
         background:#434;
-        color:#ede;
+        color:transparent;
+/*        text-shadow: 0 0 15px #ede;  */
+        color:#ede;  
         white-space: pre;
         padding:0.5em;
         margin:0.15em;
         cursor: pointer;
         width:9em
       }
+      .hover {
+        background: rgba(188,188,210,0.5);
+      }
       .members span.hover {
-        box-shadow: 0 0 4px 4px blue;
+        opacity:0.5;
+        background:#000 !important;
+        box-shadow: 
+          0 0 2px 4px #339,
+          inset 0px 0px 1px 2px #aac;
       }
       .result {
         border-top: 1px solid #a9a;
@@ -52,9 +62,12 @@
         font-size:1.25em;
       }
       .call .timestamp {
-        text-align:center;
         font-weight:normal;
-        font-size:1.15em;
+        font-size:1em;
+      }
+      .call .timestamp u {
+        text-decoration: none;
+        font-size:1.25em;
       }
       .call { 
         vertical-align: middle;
@@ -118,7 +131,7 @@
 
     <script type="text/template" id="Call-Result">
       <div class="span1 timestamp"><span><%= begin_timestamp %></span></div>
-        <div class="span1 duration"><span><%= duration %></span></div>
+      <div class="span1 duration"><span><%= duration %></span></div>
       <div class="span8 members"><%= current_video_audience %></div>
     </script>
 
