--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
     <script src="js/underscore.js"></script>
+    <script src="js/db.min.js"></script>
     <script src="js/skype-search.js"></script>
 
   </body>
