--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         cursor: pointer;
         width:9em
       }
+      .channel span {
+        box-shadow: 
+          2px 2px 4px rgba(250,250,250,0.5) inset,
+          -2px -2px 4px rgba(0,0,0,0.5) inset;
+        color: transparent;
+/*        text-shadow:0 0 10px white; */
+        color:#ede;   
+        padding:1em;
+        width:9em;
+      }
       .hover {
         background: rgba(188,188,210,0.5);
       }
@@ -141,6 +151,7 @@
       <div class="span1 timestamp"><span><%= begin_timestamp %></span></div>
       <div class="span1 duration"><span><%=duration %><small><%= fractional_duration %> hr</small></span></div>
       <div class="span8 members"><%= current_video_audience %></div>
+      <div class="span1 channel"><span><%= conv_dbid %></span></div>
     </script>
 
     <script type="text/template" id="Search-Result">
