--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
               <li><a id="search-text"></a></li>
               <li><button onclick="showCalls()" class='btn'>Show Calls</button></a></li>
             </ul>
+            <ul class="nav pull-right">
+              <li><a class="call-filter"></a></li>
+              <li><button id="showAll" disabled onclick="showAll()" class='btn'>Show All</button></a></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -87,6 +91,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
     <script src="js/underscore.js"></script>
+    <script src="js/evda.min.js"></script>
     <script src="js/db.min.js"></script>
     <script src="js/skype-search.js"></script>
 
