--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/datepicker.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -39,14 +40,11 @@
           <form class="navbar-search pull-left" action=javascript:finderAlias()>
             <input type="text" id="search" class="search-query" placeholder="Search">
           </form>
+          <ul class="nav nav-pills">
+            <li><a onclick="state(this)">Calls</a></li>
+            <li class="active"><a onclick="state(this)">Chat</a></li>
+          </ul>
           <div class="tabbable tabs-left">
-            <ul class="nav ">
-              <li><a id="search-text"></a></li>
-            </ul>
-            <ul class="nav nav-pills">
-              <li><a onclick="state(this)">Calls</a></li>
-              <li class="active"><a onclick="state(this)">Chat</a></li>
-            </ul>
             <form class="navbar-search pull-left">
               <input data-provide="typeahead" type="text" id="room" class="search-query" placeholder="Room Filter">
               <button id="showAll" disabled onclick="filterClear()" class='btn'>Show All</button>
@@ -85,6 +83,11 @@
       <span class="label"><%= room %></span>
     </script>
 
+    <script type="text/template" id="Search-Container">
+      <a class="btn expand"><i class="icon-chevron-down"></i></a>
+      <div><%= row %></div>
+    </script>
+
     <script type="text/template" id="Search-Result">
       <div class="span2 author"><%= $.trim(from_dispname) %><span class='timestamp'><%= timestamp %></span></div>
       <div class="span10 text"><%= body_xml %></div>
@@ -98,6 +101,7 @@
     <script src="js/evda.min.js"></script>
     <script src="js/db.min.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/skype-search.js"></script>
 
   </body>
