--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
       </div>
     </div>
 
+    <div id="waiter">
+      <div id="fadingBarsG">
+        <div id="fadingBarsG_1" class="fadingBarsG"></div>
+        <div id="fadingBarsG_2" class="fadingBarsG"></div>
+        <div id="fadingBarsG_3" class="fadingBarsG"></div>
+        <div id="fadingBarsG_4" class="fadingBarsG"></div>
+        <div id="fadingBarsG_5" class="fadingBarsG"></div>
+        <div id="fadingBarsG_6" class="fadingBarsG"></div>
+        <div id="fadingBarsG_7" class="fadingBarsG"></div>
+        <div id="fadingBarsG_8" class="fadingBarsG"></div>
+      </div>
+    </div>
 
     <div class="container-fluid">
       <div class="row-fluid">
