ui fixes + docs

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
       </div>
     </div>
 
+    <div class="container" id="instructions">
+      <h2>Welcome to skype-search!</h2>
+      <p>You can search all your conversations for a specific word.</p>
+      <p>You can also view logs from only certain roomts.</p>
+      <p><b>To start</b> enter a query term in the box above and press enter.</p>
+      <p>You can get the latest version of this code at <a href=https://github.com/kristopolous/skype-search>https://github.com/kristopolous/skype-search</a>.</p>
+      <i>Have fun.</i>
+    </div>
+
     <div id="waiter">
       <div id="fadingBarsG">
         <div id="fadingBarsG_1" class="fadingBarsG"></div>
