--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <script type="text/template" id="Search-Result">
       <div class="span2 author"><%= $.trim(from_dispname) %><span class='timestamp'><%= timestamp %></span></div>
-      <div class="span10 text"><%= text(body_xml) %></div>
+      <div class="span10 text"><%= body_xml %></div>
     </script>
     <!-- Le javascript
     ================================================== -->
