More user filtering trickery

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </script>
 
     <script type="text/template" id="Filter-Room">
-      <span class="label"><%= room %></span>
+      <span hover="label label-inverse" class="label <%=type%>"><%= room %></span>
     </script>
 
     <script type="text/template" id="Channel-Header">
