--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             type="button" 
             id="showAll" 
             onclick="filterClear()">All</button>
-<!--
-            <form class="navbar-dates pull-left">
+
+            <form class="navbar-dates pull-right">
               <div class="input-append date" id="dp3" data-date-format="yyyy-mm-dd">
                 <input class="span2" size="16" type="text">
                 <span class="add-on"><i class="icon-th"></i></span>
               </div>
             </form>
--->
+
           <div class="container" id="filterList-container">
             <span id="filterList"></span>
           </div>
