--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </script>
 
     <script type="text/template" id="Search-Result">
-      <div class="span2 author"><%= $.trim(from_dispname) %><span class='timestamp'><%= timestamp %></span></div>
+      <div title="<%= timestamp %>" class="span2 author"><%= $.trim(from_dispname) %><span class='timestamp'><%= timestamp %></span></div>
       <div class="span10 text"><%= body_xml %></div>
     </script>
     <!-- Le javascript
