--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </script>
 
     <script type="text/template" id="Search-Result">
-      <div title="<%= timestamp %>" class="span2 author"><a onclick='filter.user("<%= username %>")'><%= $.trim(from_dispname) %></a><span class='timestamp'><%= timestamp %></span></div>
-      <div class="span10 text"><%= body_xml %></div>
+      <div title="<%= timestamp %>" class="author"><a onclick='filter.user("<%= username %>")'><%= $.trim(from_dispname) %></a><span class='timestamp'><%= timestamp %></span></div>
+      <div class="text"><%= body_xml %></div>
     </script>
     <!-- Le javascript
     ================================================== -->
