new meta search

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             id="showAll" 
             onclick="filterClear()">All</button>
 
-          <form class="navbar-search pull-right">
+          <form method="get" action="javascript:searchDate()" id="date-search" class="navbar-search pull-right">
             <input class="search-query" placeholder="From" id="from" size="3" type="text">
             <input class="search-query" placeholder="To" id="to" size="5" type="text">
           </form>
