--- a/index.html
+++ b/index.html
@@ -56,10 +56,16 @@
             id="showAll" 
             onclick="filterClear()">All</button>
 
-          <form method="get" action="javascript:searchDate()" id="date-search" class="navbar-search pull-right">
+          <form method="get" action="javascript:searchDate(false)" id="date-search" class="navbar-search pull-right">
             <input class="search-query" placeholder="From" id="from" size="3" type="text">
             <input class="search-query" placeholder="To" id="to" size="5" type="text">
+            <input type=submit style=display:none>
           </form>
+          <button
+            style='float:right'
+            class="btn" 
+            type="button" 
+            id="noSearch" onclick="clearSearchDate()">Clear</button>
 
           <div class="container" id="filterList-container">
             <span id="filterList"></span>
