Adding a transparent colon for easier copy/paste

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </script>
 
     <script type="text/template" id="Search-Result">
-      <div title="<%= timestamp %>" class="author"><a onclick='filter.user("<%= username %>")'><%= $.trim(from_dispname) %></a><span class='timestamp'><%= timestamp %></span></div>
+      <div title="<%= timestamp %>" class="author"><a onclick='filter.user("<%= username %>")'><%= $.trim(from_dispname) %></a><span class='timestamp'><%= timestamp %></span><span class='colon'>:</span></div>
       <div class="text"><%= body_xml %></div>
     </script>
     <!-- Le javascript
